update name and rerunn notebook

--- a/benchmarking/benchmark_top_hat.ipynb
+++ b/benchmarking/benchmark_top_hat.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -53,25 +53,29 @@
      "data": {
       "text/plain": [
        "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 128\n",
-       "\tGlobal Memory Size: 25358 MB\n",
-       "\tMaximum Object Size: 6339 MB"
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.183.06\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24183 MB\n",
+       "\tMaximum Object Size:         6045 MB\n",
+       "\tMax Clock Frequency:         2520 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pcle.set_wait_for_kernel_to_finish(True)\n",
+    "pcle.wait_for_kernel_to_finish(True)\n",
     "pcle.select_device('RTX')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -98,18 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4 warnings generated.\n",
+      "4 warnings generated.\n",
+      "4 warnings generated.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto_prototype top-hat-shere duration: 0.07216572761535645\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.06630992889404297\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.0659325122833252\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.06356620788574219\n",
-      "pyclesperanto_prototype top-hat-shere duration: 0.06781673431396484\n"
+      "pyclesperanto_prototype top-hat-shere duration: 0.25440526008605957\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.07837772369384766\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.07501721382141113\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.06390213966369629\n",
+      "pyclesperanto_prototype top-hat-shere duration: 0.06378054618835449\n"
      ]
     }
    ],
@@ -127,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -136,11 +149,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto top-hat-shere duration: 0.06919169425964355\n",
-      "pyclesperanto top-hat-shere duration: 0.06446290016174316\n",
-      "pyclesperanto top-hat-shere duration: 0.06555461883544922\n",
-      "pyclesperanto top-hat-shere duration: 0.06267595291137695\n",
-      "pyclesperanto top-hat-shere duration: 0.06412076950073242\n"
+      "pyclesperanto top-hat-shere duration: 0.16746950149536133\n",
+      "pyclesperanto top-hat-shere duration: 0.06676363945007324\n",
+      "pyclesperanto top-hat-shere duration: 0.06292200088500977\n",
+      "pyclesperanto top-hat-shere duration: 0.061110734939575195\n",
+      "pyclesperanto top-hat-shere duration: 0.061188459396362305\n"
      ]
     }
    ],
@@ -158,18 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto_prototype top-hat-box duration: 0.02030634880065918\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.02023458480834961\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.02082657814025879\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.020810842514038086\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.02071523666381836\n"
+      "pyclesperanto_prototype top-hat-box duration: 0.11823725700378418\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.020470619201660156\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.021088123321533203\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.021039724349975586\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.021093130111694336\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "4 warnings generated.\n",
+      "4 warnings generated.\n"
      ]
     }
    ],
@@ -187,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -196,11 +217,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto top-hat-box duration: 0.01052713394165039\n",
-      "pyclesperanto top-hat-box duration: 0.009463071823120117\n",
-      "pyclesperanto top-hat-box duration: 0.009361982345581055\n",
-      "pyclesperanto top-hat-box duration: 0.009383201599121094\n",
-      "pyclesperanto top-hat-box duration: 0.010474681854248047\n"
+      "pyclesperanto top-hat-box duration: 0.11615204811096191\n",
+      "pyclesperanto top-hat-box duration: 0.009797096252441406\n",
+      "pyclesperanto top-hat-box duration: 0.009183645248413086\n",
+      "pyclesperanto top-hat-box duration: 0.00987696647644043\n",
+      "pyclesperanto top-hat-box duration: 0.009579658508300781\n"
      ]
     }
    ],
@@ -218,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -227,11 +248,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "skimage top-hat disk duration: 227.64173436164856\n",
-      "skimage top-hat disk duration: 226.5375473499298\n",
-      "skimage top-hat disk duration: 226.06916117668152\n",
-      "skimage top-hat disk duration: 224.93067979812622\n",
-      "skimage top-hat disk duration: 224.46945238113403\n"
+      "skimage top-hat disk duration: 226.4084393978119\n",
+      "skimage top-hat disk duration: 226.01446318626404\n",
+      "skimage top-hat disk duration: 228.47509145736694\n",
+      "skimage top-hat disk duration: 225.7498869895935\n",
+      "skimage top-hat disk duration: 225.4377100467682\n"
      ]
     }
    ],
@@ -247,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -256,11 +277,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "skimage top-hat square duration: 1.3502135276794434\n",
-      "skimage top-hat square duration: 1.3517491817474365\n",
-      "skimage top-hat square duration: 1.373570442199707\n",
-      "skimage top-hat square duration: 1.3558220863342285\n",
-      "skimage top-hat square duration: 1.373267412185669\n"
+      "skimage top-hat square duration: 1.4154345989227295\n",
+      "skimage top-hat square duration: 1.4211006164550781\n",
+      "skimage top-hat square duration: 1.422464370727539\n",
+      "skimage top-hat square duration: 1.4164481163024902\n",
+      "skimage top-hat square duration: 1.419248342514038\n"
      ]
     }
    ],
@@ -278,12 +299,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Impact of `dtype` on speed"
+    "### Impact of `dtype` on speed\n",
+    "\n",
+    "We notice that `pyclesperanto` is significatively faster than the `prototype` when running the top-hat-box filter. \n",
+    "Both code are fairly similar and rely on the same kernel code, hence their is no justification to this speed gain.\n",
+    "\n",
+    "Indeed, from the `gaussian blur` benchmark, we can see that we do not have a speed gain even thow both rely on distributed filters.\n",
+    "The main change is from the `dtype`. Here, we are processing `uint8` (or `unsigned char`) while the `propotype` only manipulate `float32` type (x4 the memory than `uint8`).\n",
+    "\n",
+    "If we replicate the benchmarking with `float32` type, we see similar processing speed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,18 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto_prototype top-hat-box duration: 0.01829671859741211\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.020997285842895508\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.020043611526489258\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.019987821578979492\n",
-      "pyclesperanto_prototype top-hat-box duration: 0.020021915435791016\n"
+      "pyclesperanto_prototype top-hat-box duration: 0.019962787628173828\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.02262401580810547\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.0244443416595459\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.023203611373901367\n",
+      "pyclesperanto_prototype top-hat-box duration: 0.02309703826904297\n"
      ]
     }
    ],
@@ -321,18 +350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto top-hat-box duration: 0.017570018768310547\n",
-      "pyclesperanto top-hat-box duration: 0.018915653228759766\n",
-      "pyclesperanto top-hat-box duration: 0.019094467163085938\n",
-      "pyclesperanto top-hat-box duration: 0.017920494079589844\n",
-      "pyclesperanto top-hat-box duration: 0.017951011657714844\n"
+      "pyclesperanto top-hat-box duration: 0.15494489669799805\n",
+      "pyclesperanto top-hat-box duration: 0.017775535583496094\n",
+      "pyclesperanto top-hat-box duration: 0.018291234970092773\n",
+      "pyclesperanto top-hat-box duration: 0.01889801025390625\n",
+      "pyclesperanto top-hat-box duration: 0.01804947853088379\n"
      ]
     }
    ],
