--- a/demos/basics/image_size_limitations.ipynb
+++ b/demos/basics/image_size_limitations.ipynb
@@ -18,11 +18,15 @@
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8358 MB\n",
-       "\tMaximum Object Size: 2089 MB"
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.216.01\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24217 MB\n",
+       "\tMaximum Object Size:         6054 MB\n",
+       "\tMax Clock Frequency:         2625 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
      "execution_count": 1,
@@ -32,8 +36,9 @@
    ],
    "source": [
     "import pyclesperanto as cle\n",
+    "import numpy as np\n",
     "\n",
-    "cle.get_device()"
+    "cle.select_device()"
    ]
   },
   {
@@ -173,24 +178,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4 warnings generated.\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error: Fail to launch kernel. OpenCL error : CL_MEM_OBJECT_ALLOCATION_FAILURE (-4).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m cle\u001b[38;5;241m.\u001b[39mset_ramp_x(image)\n\u001b[1;32m      2\u001b[0m result\u001b[38;5;241m.\u001b[39mshape\n",
-      "File \u001b[0;32m~/Libraries/miniconda3/envs/build8/lib/python3.11/site-packages/pyclesperanto/_decorators.py:85\u001b[0m, in \u001b[0;36mplugin_function.<locals>.worker_function\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     82\u001b[0m         bound\u001b[38;5;241m.\u001b[39marguments[key] \u001b[38;5;241m=\u001b[39m input_image\u001b[38;5;241m.\u001b[39mdevice\n\u001b[1;32m     84\u001b[0m \u001b[38;5;66;03m# call the decorated function\u001b[39;00m\n\u001b[0;32m---> 85\u001b[0m result \u001b[38;5;241m=\u001b[39m function(\u001b[38;5;241m*\u001b[39mbound\u001b[38;5;241m.\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mbound\u001b[38;5;241m.\u001b[39mkwargs)\n\u001b[1;32m     87\u001b[0m \u001b[38;5;66;03m# # Cast the result as an Array if it is not already\u001b[39;00m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;66;03m# if not isinstance(result, _Array):\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;66;03m#     result = _Array(result)\u001b[39;00m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/Libraries/miniconda3/envs/build8/lib/python3.11/site-packages/pyclesperanto/_tier1.py:1272\u001b[0m, in \u001b[0;36mset_ramp_x\u001b[0;34m(input_image, device)\u001b[0m\n\u001b[1;32m   1268\u001b[0m \u001b[38;5;129m@plugin_function\u001b[39m\n\u001b[1;32m   1269\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mset_ramp_x\u001b[39m(input_image: Image, device: Device \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Image:\n\u001b[1;32m   1270\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_pyclesperanto\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _set_ramp_x \u001b[38;5;28;01mas\u001b[39;00m op\n\u001b[0;32m-> 1272\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m op(device\u001b[38;5;241m=\u001b[39mdevice, src\u001b[38;5;241m=\u001b[39minput_image)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Error: Fail to launch kernel. OpenCL error : CL_MEM_OBJECT_ALLOCATION_FAILURE (-4)."
-     ]
+     "data": {
+      "text/plain": [
+       "(1024, 1024, 4096)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -199,23 +194,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1024f696",
+   "cell_type": "markdown",
+   "id": "e33fae42-cbeb-4380-aafc-a1d9a33ff49c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "result"
+    "We have now twice the data size used in our device, for the `image` and the `results`. This saturate our memory and we cannot do much more without releasing some space. For that we can delete the `image` now that it has been process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fad9c3be",
+   "execution_count": 8,
+   "id": "363c331e-4bf2-459a-8fad-0b0b88c7197a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error: Fail to read buffer memory. OpenCL error : CL_OUT_OF_RESOURCES (-5).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mcle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpull\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/data/clesperanto/pyclesperanto/pyclesperanto/_memory.py:128\u001b[0m, in \u001b[0;36mpull\u001b[0;34m(array)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Pull the input image from the device to the host.\u001b[39;00m\n\u001b[1;32m    116\u001b[0m \n\u001b[1;32m    117\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;124;03m    Image data\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(array, Array):\n\u001b[0;32m--> 128\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43marray\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    129\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m array\n",
+      "File \u001b[0;32m/data/clesperanto/pyclesperanto/pyclesperanto/_array.py:108\u001b[0m, in \u001b[0;36mget\u001b[0;34m(self, origin, region)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Get the content of the Array into a numpy array.\u001b[39;00m\n\u001b[1;32m     84\u001b[0m \n\u001b[1;32m     85\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;124;03m    The array itself.\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     97\u001b[0m caster \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfloat32\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_read_float32,\n\u001b[1;32m     99\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mint8\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_read_int8,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;66;03m# \"uint64\": self._read_uint64,\u001b[39;00m\n\u001b[1;32m    107\u001b[0m }\n\u001b[0;32m--> 108\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcaster\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43morigin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregion\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error: Fail to read buffer memory. OpenCL error : CL_OUT_OF_RESOURCES (-5)."
+     ]
+    }
+   ],
    "source": [
-    "print(cle.cl_info())"
+    "res = cle.pull(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "816dbc04-e048-426c-8077-7555c2691213",
+   "metadata": {},
+   "source": [
+    "If you experiencing this error:\n",
+    "> RuntimeError: Error: Fail to read buffer memory. OpenCL error : CL_OUT_OF_RESOURCES (-5).\n",
+    "\n",
+    "with the following code `CL_OUT_OF_RESOURCES`, it is most likely that you did not have enough memory on your device for the data you are trying to process."
    ]
   },
   {
@@ -243,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
