--- a/demos/basics/vectors_and_matrices_operations.ipynb
+++ b/demos/basics/vectors_and_matrices_operations.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Multiply vectors and matrices\n",
-    "This example notebook is translated from [ImageJ macro](https://github.com/clij/clij2-docs/tree/master/src/main/macro/anisotropic_coordinates.ijm).\n",
+    "This example notebook is translated from this [ImageJ macro](https://github.com/clij/clij2-docs/tree/master/src/main/macro/anisotropic_coordinates.ijm).\n",
     "\n",
     "When dealing with three dimensional point coordinates, it is mandatory to take the voxel size into account, e.g. for measuring distances between points. This example shows how to multiply a list of coordinates by a given voxel size.\n",
     "\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,37 +31,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array shape:(3, 1)\n",
-      "GPU array shape:(3, 1)\n"
+      "Array shape: (3, 1)\n",
+      "GPU array shape: (3, 1)\n"
      ]
     }
    ],
    "source": [
     "voxel_size = np.asarray([[0.2], [0.2], [0.5]])\n",
-    "print(\"Array shape:\" + str(voxel_size.shape))\n",
-    "\n",
     "gpu_voxel_size = cle.push(voxel_size)\n",
-    "print(\"GPU array shape:\" + str(voxel_size.shape))"
+    "\n",
+    "print(f\"Array shape: {voxel_size.shape}\")\n",
+    "print(f\"GPU array shape: {gpu_voxel_size.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array shape:(3, 4)\n",
-      "GPU array shape:(3, 4)\n"
+      "Array shape: (3, 4)\n",
+      "GPU array shape: (3, 4)\n"
      ]
     }
    ],
@@ -73,15 +73,15 @@
     "        [9, 11, 6, 2 ]  # Z\n",
     "    ]\n",
     ")\n",
-    "print(\"Array shape:\" + str(pointlist.shape))\n",
-    "\n",
     "gpu_pointlist = cle.push(pointlist)\n",
-    "print(\"GPU array shape:\" + str(gpu_pointlist.shape))"
+    "\n",
+    "print(f\"Array shape: {pointlist.shape}\")\n",
+    "print(f\"GPU array shape: {gpu_pointlist.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +136,6 @@
       "[[0 0 1 2]\n",
       " [0 1 0 0]\n",
       " [4 5 3 1]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4 warnings generated.\n"
      ]
     }
    ],
@@ -161,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -171,13 +164,6 @@
       "[[0.2]\n",
       " [0. ]\n",
       " [4.5]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4 warnings generated.\n"
      ]
     }
    ],
@@ -211,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
