--- a/docs/source/prototype/api_differences.ipynb
+++ b/docs/source/prototype/api_differences.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto (0.14.2) v.s. pyclespernato_prototype (0.24.4)\n"
+      "pyclesperanto (0.16.0) v.s. pyclespernato_prototype (0.24.4)\n"
      ]
     }
    ],
@@ -405,8 +405,12 @@
       " - z_position_of_maximum_z_projection\n",
       " - z_position_of_minimum_z_projection\n",
       "\n",
-      "\u001b[1m- Functions in pyclesperanto not in prototype (48):\u001b[0m\n",
+      "\u001b[1m- Functions in pyclesperanto not in prototype (56):\u001b[0m\n",
+      " - binary_closing\n",
+      " - binary_dilate\n",
+      " - binary_erode\n",
       " - binary_infsup\n",
+      " - binary_opening\n",
       " - binary_supinf\n",
       " - bottom_hat\n",
       " - clic\n",
@@ -418,9 +422,13 @@
       " - connected_components_labeling\n",
       " - detect_maxima\n",
       " - detect_minima\n",
-      " - dilate\n",
-      " - erode\n",
+      " - dilation\n",
+      " - erosion\n",
       " - filter_label_by_size\n",
+      " - grayscale_closing\n",
+      " - grayscale_dilate\n",
+      " - grayscale_erode\n",
+      " - grayscale_opening\n",
       " - importlib\n",
       " - label_bounding_box\n",
       " - laplace\n",
@@ -699,7 +707,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skbuild3",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
@@ -713,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
